# darkbrim

./: CMakeLists.txt  README.md
assets/Shaders/: default.vert
examples/: CMakeLists.txt  Main.c
include/DarkBrim/: Camera.h  Constants.h  Core.h  Debug.h  File.h  Graphics.h  Keys.h  Space.h  Window.h
src/: CMakeLists.txt  Camera.c  Core.c  Debug.c  File.c  Graphics.c  Keys.c  Space.c  Window.c
